[tool.poetry]
name = "rtb-membership-consumer-auto"
version = "0.1.0"
description = ""
authors = ["ErRahul9 <rparashar@mountain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.5.0"
aerospike = ">=6.2.0"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
redis = "^4.6.0"
kafka-python = "^2.0.2"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
